--- a/style.css
+++ b/style.css
@@ -7,14 +7,16 @@ body {
 
 main {
   text-align: center;
-  padding-top: 350px;
+  /* padding-top: 3px; */
 }
 h1 {
   font-family: "Courier New", Courier, monospace;
   font-style: normal;
   text-align: center;
-  font-size: xx-large;
+  font-size: 80px;
   color: black;
+
+  /* margin: 0; */
 }
 
 .play {
@@ -91,6 +93,7 @@ h4 {
   /* background-image: url(https://www.pngmart.com/files/17/Game-Over-PNG-File.png); */
 }
 body button {
+  margin: 150px;
   font-size: 20px;
   background-color: #f1c30d;
   color: #fff;
