made some changes

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h4 {
   width: 50%;
   text-align: center;
   padding-top: 60px;
+  margin-top: 150px;
   margin-left: 25%;
   font-size: 100px;
   color: #ff3c00;
